# b4pb-TicketPortalAPI

./: README  app.py  main.py  pyproject.toml  requirements.txt  run.sh
controllers/: asset_controller.py  department_controller.py  ticket_controller.py  user_controller.py
dataloaders/: dataloader.py
dataloaders/data/: Assets.csv  Departments.csv  TicketPriorities.csv  TicketStatus.csv  Tickets.csv  Users.csv
interfaces/: repository_interface.py
models/: asset.py  department.py  ticket.py  user.py
repositories/: repository.py  user_repository.py
services/: service.py  ticket_service.py  user_service.py
tests/: test_controllers.py  test_main.py  test_user.py
